paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2_a/sample_004/target.compile.log
error[E0599]: no method named `type_id` found for fn item `fn(i32) -> i32 {id}` in the current scope
   --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/lvalue_array_fun_c2_a/sample_004/target.rs:115:11
    |
115 |     if id.type_id() != 6 {
    |           ^^^^^^^ method not found in `fn(i32) -> i32 {id}`
    |
   ::: /Users/arielkellison/.rustup/toolchains/nightly-2025-09-10-aarch64-apple-darwin/lib/rustlib/src/rust/library/core/src/any.rs:134:8
    |
134 |     fn type_id(&self) -> TypeId;
    |        ------- the method is available for `fn(i32) -> i32 {id}` here
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `Any` which provides `type_id` is implemented but not in scope; perhaps you want to import it
    |
  1 + use std::any::Any;
    |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.